grammer.txt
lang -> exp+
exp -> appoint_exp | if_exp | while_exp
appoint_exp -> VAR APPOINT_OP (math_exp | STRING) ENDCOM
value -> INTEGER | STRING | VAR

while_exp -> logic RFBreaket exp RFBreaket
if_exp -> logic LFBreaket exp RFBreaket
ELSE -> LFBreaket exp RFBreaket

logic -> value (LOG_OP (logical_exp | math_exp))*
math_exp -> (value | math_exp_wbr)(OP math_expr)*
math_exp_wbr -> LP math_exp RP
